--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -9,7 +9,7 @@ repository:
   # See https://docs.github.com/en/rest/reference/repos#update-a-repository for all available settings.
 
   # The name of the repository. Changing this will rename the repository
-  name: NyanCat
+  name: SafetyWall
 
   # A short description of the repository that will show up on GitHub
   description: An add-on that adds a safety fence around the Kerbal Space Center, for Kerbal Space Program.
