--- a/.imgbotconfig
+++ b/.imgbotconfig
@@ -1,21 +1,22 @@
 {
     "schedule": "weekly",
     "ignoredFiles": [
-        "FORUM-01.png",
-        "FORUM-02.png",
-        "FORUM-03.png",
-        "FORUM-04.png",
-        "**/GameData/**",
-        "**/LegalMumboJumbo/**",
+        "GameData/godarklight/SafetyWall/*",
         "source/*",
+        "**/@thumbs/**",
+        "**/Agencies/**",
         "**/Assets/**",
         "**/Flags/**",
-        "**/Agents/**",
-        "**/Textures/**",
-        "**/UI/**",
-        "**/PluginData/**",
+        "**/FX/**",
         "**/Icons/**",
-        "**/@thumbs/**"
+        "**/LegalMumboJumbo/**",
+        "**/Parts/**",
+        "**/PluginData/**",
+        "**/Props/**",
+        "**/SimpleIcons/**",
+        "**/Spaces/**",
+        "**/Textures/**",
+        "**/UI/**"
     ],
     "aggressiveCompression": "false",
     "compressWiki": "true",
