--- a/source/SafetyWall.csproj
+++ b/source/SafetyWall.csproj
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="17.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,72 +9,76 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SafetyWall</RootNamespace>
     <AssemblyName>SafetyWall</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <LangVersion>latest</LangVersion>
     <TargetFrameworkProfile />
-    <!-- <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion> -->
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
+    <OutputPath>..\GameData\godarklight\SafetyWall\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <Prefer32Bit>false</Prefer32Bit>
     <PlatformTarget>anycpu</PlatformTarget>
-    <OutputPath>..\GameData\godarklight\SafetyWall\Plugins\</OutputPath>
+    <DocumentationFile>..\docs\Code\Code.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
+    <OutputPath>..\GameData\godarklight\SafetyWall\Plugins\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>anycpu</PlatformTarget>
     <ConsolePause>false</ConsolePause>
-    <OutputPath>..\GameData\godarklight\SafetyWall\Plugins\</OutputPath>
+    <DocumentationFile>..\docs\Code\Code.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+    <TransformOnBuild>true</TransformOnBuild>
+    <OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
+    <TransformOutOfDateOnly>false</TransformOutOfDateOnly>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\Assembly-CSharp.dll">
+    <Reference Include="$(K14)Assembly-CSharp.dll">
       <Private>False</Private>
     </Reference>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\Assembly-CSharp-firstpass.dll">
+    <Reference Include="$(K14)Assembly-CSharp-firstpass.dll">
       <Private>False</Private>
     </Reference>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.dll">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.CoreModule.dll">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.IMGUIModule.dll">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.PhysicsModule.dll">
+    <Reference Include="$(K14)UnityEngine.dll">
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <!-- <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.CoreModule.dll">
+    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.IMGUIModule.dll">
+    <Reference Include="$(K112)\KSP_x64_Data\Managed\UnityEngine.PhysicsModule.dll"> -->
+    <!-- <Reference Include="$(K14)UnityEngine.AudioModule.dll"> -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WallMain.cs" />
-    <Compile Include="WallMesh.cs" />
-    <Compile Include="WallSegment.cs" />
-      <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Version.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Version.tt</DependentUpon>
     </Compile>
+    <Compile Include="WallMain.cs" />
+    <Compile Include="WallMesh.cs" />
+    <Compile Include="WallSegment.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\Version.tt">
+    <!-- <Content Include="Properties\Version.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Version.cs</LastGenOutput>
-    </Content>
+    </Content> -->
     <None Include="wall.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -84,6 +88,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties\Version.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Version.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v17.0\TextTemplating\Microsoft.TextTemplating.targets" />
@@ -96,18 +106,16 @@
 set K112=$(K112)
 IF "%25K112%25"=="" (
 	ECHO Configuration error - K112 not specified in project.
-	ECHO Either set K112 environment variable
+	ECHO Either set K100 environment variable
 	PAUSE
-	GOTO DONE
+	rem GOTO DONE
 )
-
-start /D $(ProjectDir)..\ /WAIT _deploy.bat  $(TargetDir) $(TargetFileName) $(TargetName)
-if $(ConfigurationName) == Release (	
-  start /D $(ProjectDir)..\ /WAIT _buildRelease.bat $(TargetDir) $(TargetFileName) $(TargetName)
-
+del $(TargetDir)\*.pdb
+start /D $(SolutionDir)..\ /WAIT _addonDeploy.bat
+if $(ConfigurationName) == Release start /D $(SolutionDir)..\  /WAIT _addonRelease.bat
 del $(TargetDir)\*.tmp
-)
-</PostBuildEvent>
+:DONE
+	</PostBuildEvent>
   </PropertyGroup>
   <ProjectExtensions>
     <MonoDevelop>
