--- a/GameData/godarklight/SafetyWall/Localization/pt-br.cfg
+++ b/GameData/godarklight/SafetyWall/Localization/pt-br.cfg
@@ -13,12 +13,12 @@ Localization
 	pt-br
 	{
 	// Addon specific
-		#WALL-name = barreiraDeSegurança
+		#WALL-name = BarreiraDeSegurança
 		#WALL-abbv = BARREIRA
 		#WALL-tags = barreiraDeSegurança barreira
 
 	// Code
-		#WALL-00 = ParedeDeSegurança <<1>>
+		#WALL-00 = BarreiraDeSegurança <<1>>
 		#WALL-01 = Adicionar à barreira
 		#WALL-02 = Remover última Barreira
 		#WALL-03 = Pausar
